adding main content

--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
     margin: 0;
 }
 body {
-    font-family: Arial;
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -45,8 +44,28 @@ font-size: 25px;
 color: wheat;
 }
 
+.text-color {
+    margin-bottom: 15px;
+    padding: 25px;
+    height: 100px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #2b8019;
+    color: #ffffff;
+}
+.contacts {
+    text-align: center;
+    font-size: 220px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
 @media screen and (max-width: 768px) {
     nav a {
       flex-direction: column;
     }
+}
+footer {
+    padding: 20px;
+    text-align: center;
+    background: rgb(15, 49, 15);
+    color: #fff;
+    margin-top: auto;
   }
