push after hyperlink fix

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ color: wheat;
     background-color: #2b8019;
     color: #ffffff;
 }
-.contacts {
+.contact-info {
     text-align: center;
     font-size: 220px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
