--- a/style.css
+++ b/style.css
@@ -39,9 +39,18 @@ header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
+.forest {
+    height: 800px;
+    width: 100%;
+    margin-bottom: 25px;
+    background-image: url("https://www.treehugger.com/thmb/K1h7GiF_jn-1YQIos2vqfebvSdQ=/768x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/GettyImages-1273584292-cbcd5f85f4c646d58f7a7fa158dcaaeb.jpg");
+    background-size: cover;
+    background-position: center;
+}
 h2 {
     font-size: 30px;
     font-family: 'Times New Roman', Times, serif;
+    border-radius: 20px;
 }
 .content {
     margin-right: 20px;
@@ -53,11 +62,11 @@ h2 {
     height: auto;
     border-style: solid;
     padding: 25px;
+    border-radius: 20px;
 }
 img {
-  border-radius: 20px;
-  box-shadow: 20px 15px 15px rgb(192, 245, 209);
-
+  border-radius: 30px;
+  box-shadow: 10px 5px 15px rgb(192, 245, 209);
 }
 }
 nav a {
