--- a/style.css
+++ b/style.css
@@ -84,6 +84,9 @@ h2 {
 .resume {
     width: auto;
     height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 nav a {
 text-align: center;
